<resources>
    <string name="app_name">Just Java</string>
    <string name="order">ORDER</string>
    <string name="quantity">Quantity</string>
    <string name="chocolate">Chocolate</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="toppings">Toppings</string>
    <string name="subject_mail">Just Java order from </string>
    <string name="increment">You can\'t enter more than 100 coffees</string>
    <string name="decrement">You can\'t enter less than 1 coffee</string>
    <string name="name">Name: </string>
    <string name="addwc">Add Whipped Cream? </string>
    <string name="addch">Add Chocolate? </string>
    <string name="total">Total $</string>
    <string name="thanks">Thank you!</string>
</resources>
