<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.example.android.justjava.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText

        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:inputType="textCapWords" />

    <TextView
        android:text="@string/toppings"
        style="@style/HeaderTextStyle"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"/>

    <CheckBox android:id="@+id/checkbox_whipped_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:textSize="16sp"
        android:paddingLeft="24dp" />

    <CheckBox android:id="@+id/checkbox_chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:paddingLeft="24dp" />

    <TextView
        android:text="@string/quantity"
        style="@style/HeaderTextStyle"
        android:layout_margin="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="-"
            android:layout_margin="8dp"
            android:onClick="decrement"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="0"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:text="+"
            android:onClick="increment"/>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:layout_margin="8dp"
        android:onClick="submitOrder"/>
</LinearLayout>
</ScrollView>